# meshrender-studio

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: user-guide.en.md  user-guide.zh-CN.md
meshrender_studio/: __init__.py  app.py  cli_prepare.py  cli_render.py  cli_run.py  core.py  figure_layout.py  job_queue.py  project_store.py  render_engine.py
meshrender_studio/static/: app.js  styles.css
meshrender_studio/templates/: index.html
tests/: test_app.py  test_core.py  test_figure_layout.py  test_jobs.py  test_project_store.py
